# claude-second-brain

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  INIZIA-QUI.md  Makefile  README.md  applica-e-push.sh  docker-compose.yml  pyproject.toml  setup_github.sh
.github/workflows/: test.yml
_brief/: 00-product-vision.md  01-audit-issues.md  02-framework-pmi.md  03-manuale-custode-draft.md  04-step-2-tech-plan.md  05-mcp-audit.md  06-cost-and-risk.md  07-naming-brand.md  README.md
_fixtures/: email_mock.json  gdrive_mock.json  m365_mock.json
_fixtures/email_eml/: 001_offerta_verdi.eml  002_ordine_rossi_attachment.eml  003_fornitore_acciai.eml  004_breve_notifica.eml  005_capitolato_cliente_attachment.eml  006_richiesta_offerta.eml  007_reminder_pagamento.eml  008_invito_fiera.eml  009_collaudo_macchina.eml  010_riepilogo_settimana.eml
_legacy-single-user/: CLAUDE.md  MEMORY.md  README.md
_legacy-single-user/references/: chi-sono.md  stile-scrittura.md
batch_ui/: __init__.py  __main__.py  _deps.txt  cli.py  drafts.py  flush.py  server.py  state.py
batch_ui/static/: style.css
batch_ui/templates/: _diff_viewer.html  _draft_row.html  base.html  batch.html  index.html
bootstrap/: INSTALL.md  RUNBOOK.md  _deps.txt  config.template.yml  wizard.py
categorizers/: _deps.txt  _enums.py  claude.py  pipeline.py  rules.py
docs/: 01-cosa-vendi.md  02-kickoff-checklist.md  03-scandagliamento.md  04-handover-checklist.md  05-manuale-custode.md  06-framework-pmi.md  07-manuale-persone.md  08-on-premise.md  aggiungere-un-progetto.md  come-aggiungere-progetto.md  framework.md  guida-formazione.md  guida-markdown-e-grafo.md  installazione-per-dummies.md  stress-test-report-v1.md
docs/brainstorms/: custodia-v2-agent-ready-requirements.md
docs/commerciale/: contratto-skeleton.md  deck-vendita.md  demo-script.md  faq.md  landing-page.md  onboarding-custode.md  preventivo-template.md
docs/plans/: 2026-05-24-001-feat-custodia-v2-sprint-0-validazione-plan.md  2026-05-24-002-feat-custodia-v2-sprint-1-cli-ingestion-plan.md  2026-05-24-003-design-llm-provider-and-drive-connector.md  2026-05-24-004-feat-custodia-v2-sprint-2a-scalability-plan.md
extractors/: _base.py  _deps.txt  _registry.py  docx.py  eml.py  pdf.py  pdf_ocr.py  plain.py  xlsx.py
product/: README.md
product/cli/: .gitignore  README.md  pyproject.toml
product/cli/custodia_cli/: __init__.py  main.py
product/cli/custodia_cli/auth/: __init__.py  fic_oauth.py  google_oauth.py  microsoft_oauth.py
product/cli/custodia_cli/commands/: __init__.py  build.py  init.py  review.py  scan.py  write.py
product/cli/custodia_cli/connectors/: __init__.py  _http.py  base.py  fatture_in_cloud.py  filesystem.py  google_drive.py  outlook.py
product/cli/custodia_cli/connectors/parsers/: __init__.py  docx.py  magic.py  pdf.py  pool.py  xlsx.py
product/cli/custodia_cli/extractor/: __init__.py  chunking.py  extractor.py  merger.py  prompts.py  schema.py  validator.py
product/cli/custodia_cli/jobs/: __init__.py  cancel.py  progress.py  runner.py
product/cli/custodia_cli/llm/: __init__.py  anthropic_provider.py  base.py  exceptions.py  fakes.py  registry.py
product/cli/custodia_cli/review/: __init__.py  diff.py  editor.py  interactive.py  merger.py  writer.py  yaml_io.py
product/cli/custodia_cli/state/: __init__.py  schema.sql  store.py
product/cli/tests/: conftest.py  test_anthropic_provider.py  test_cancel_token.py  test_connectors_base.py  test_end_to_end.py  test_extractor_chunking.py  test_extractor_extractor.py  test_extractor_merger.py  test_extractor_schema.py  test_extractor_validator.py  test_fake_provider.py  test_fic_connector.py  test_fic_oauth.py  test_filesystem_connector.py  test_filesystem_incremental.py  test_google_drive_connector.py  test_google_oauth.py  test_http_helper.py  test_init_command.py  test_jobs_runner.py  test_llm_base.py  test_magic_bytes.py  test_main.py  test_microsoft_oauth.py  test_outlook_connector.py  test_parser_pool.py  test_parsers.py  test_progress_reporter.py  test_review_command.py  test_review_diff.py  test_review_merger.py  test_review_writer.py  test_review_yaml_io.py  test_scan_fs_command.py  test_scan_manifest.py  test_scan_outlook_command.py  test_scan_resume.py  test_smart_filters.py  test_state_store.py  test_stress_filesystem.py  (+1 more)
product/cli/tests/fixtures/finto-drive/: README.md
product/cli/tests/fixtures/finto-drive/Comunicazioni/: email-torrelli-2024-03.txt
product/cli/tests/fixtures/llm/: extractor_responses.yaml  sample_responses.yaml
product/cli/tests/fixtures/stress/: __init__.py  generate.py
product/mcp-server/: custodia_mcp.py  pyproject.toml
product/web/: README.md  app.py  pyproject.toml  run.sh
product/web/.streamlit/: config.toml
product/web/custodia_web/: __init__.py  cli.py  state.py  styles.py
product/web/custodia_web/components/: __init__.py  diff_viewer.py  empty_state.py  find_data_help.py  interrupted_banner.py  live_progress.py  page_header.py  pipeline_header.py  progress.py  project_picker.py
product/web/custodia_web/pages/: __init__.py  build.py  dashboard.py  review.py  scan.py  settings.py  vault_browser.py
product/web/custodia_web/services/: __init__.py  build.py  extract.py  job_state.py  projects.py  scan.py  vault.py  write.py
product/web/tests/: test_resume_banner.py  test_services.py  test_services_job_state.py  test_services_scan.py
product/web/tools/: record_demo.py
reconcilers/: _deps.txt  dedup_hash.py  dedup_soft.py  persone.py  schede.py
scanners/: _base.py  _deps.txt  dedup_index.py  email.py  gdrive.py  m365.py  nas.py  server.py
site/: README.md  index.html  style.css  vercel.json
tests/: conftest.py  test_batch_ui.py  test_categorizer.py  test_cli.py  test_dashboard.py  test_doctor.py  test_extractors.py  test_helpers.py  test_llm.py  test_no_secrets.py  test_reconciler.py  test_scanners.py  test_watcher.py  test_wizard.py
vault/: CLAUDE.md  MEMORY.md
wiki/: __init__.py  _atomic.py  _deps.txt  _retry.py  _subprocess.py  cli.py  dashboard.py  doctor.py  errors.py  pipeline.py  watcher.py
(+81 files in other folders)
