[project]
name = "wiki-toolkit"
version = "0.1.0"
description = "Toolkit consulenziale per costruire wiki aziendali per PMI"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Valentino Grossi" }]
license = { text = "MIT" }

dependencies = [
    # Core
    "anthropic>=0.40.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    # Scanners
    "google-api-python-client>=2.100.0",
    "google-auth>=2.20.0",
    "google-auth-oauthlib>=1.0.0",
    "msgraph-sdk>=1.0.0",
    "azure-identity>=1.15.0",
    "python-magic>=0.4.27",
    # Extractors
    "pdfplumber>=0.10.0",
    "pypdf>=4.0.0",
    "python-docx>=1.0.0",
    "openpyxl>=3.1.0",
    "markdownify>=0.11.0",
    # Reconciler / Categorizer (regex avanzate, fuzzy matching)
    "rapidfuzz>=3.5.0",
    # Watcher
    "watchdog>=3.0.0",
    # Batch UI
    "flask>=3.0.0",
    "jinja2>=3.1.0",
]

[project.scripts]
wiki = "wiki.cli:main"

[project.optional-dependencies]
ocr = ["pytesseract>=0.3.10", "pillow>=10.0.0"]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "types-PyYAML>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wiki", "scanners", "extractors", "categorizers", "reconcilers", "batch_ui", "bootstrap"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
