[project]
name = "wiki-toolkit"
version = "0.1.0"
description = "Toolkit consulenziale per costruire wiki aziendali per PMI"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Valentino Grossi" }]
license = { text = "MIT" }

dependencies = [
    # Core
    "anthropic>=0.40.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    # Scanners
    "google-api-python-client>=2.100.0",
    "google-auth>=2.20.0",
    "google-auth-oauthlib>=1.0.0",
    "msgraph-sdk>=1.0.0",
    "azure-identity>=1.15.0",
    "python-magic>=0.4.27",
    # Extractors
    "pdfplumber>=0.10.0",
    "pypdf>=4.0.0",
    "python-docx>=1.0.0",
    "openpyxl>=3.1.0",
    "markdownify>=0.11.0",
    # Reconciler / Categorizer (regex avanzate, fuzzy matching)
    "rapidfuzz>=3.5.0",
    # Watcher
    "watchdog>=3.0.0",
    # Batch UI
    "flask>=3.0.0",
    "jinja2>=3.1.0",
]

[project.scripts]
wiki = "wiki.cli:main"

[project.optional-dependencies]
ocr = ["pytesseract>=0.3.10", "pillow>=10.0.0"]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "types-PyYAML>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wiki", "scanners", "extractors", "categorizers", "reconcilers", "batch_ui", "bootstrap"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM", "PTH", "RUF"]
ignore = [
    "E501",     # line length - gestito dal formatter
    "ARG002",   # unused method argument - troppi falsi positivi (es. signal handlers)
    "ARG005",   # unused lambda argument
    "B008",     # mutable default arg
    "RUF012",   # mutable class attribute - troppi positivi su Extractor base class
    "SIM105",   # contextlib.suppress - try/except/pass è più leggibile in alcuni casi
    "UP028",    # use yield from - cambia semantica in casi sottili
    "UP042",    # str enum - più chiaro con il subclass esplicito
    "B023",     # function in loop - intentional in alcuni script
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "ARG001", "ARG002"]
"_legacy-single-user/*" = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
disallow_untyped_defs = false
strict_optional = true
exclude = ["_legacy-single-user/", "_brief/", "vault/", "_fixtures/", "build/", "dist/"]

[[tool.mypy.overrides]]
module = [
    "pdfplumber.*", "pypdf.*", "openpyxl.*", "msgraph.*",
    "googleapiclient.*", "google.*", "anthropic.*", "watchdog.*",
    "pytesseract.*", "pdf2image.*", "PIL.*", "magic.*",
    "rapidfuzz.*", "markdownify.*", "docx.*", "boto3.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["wiki", "scanners", "extractors", "categorizers", "reconcilers", "batch_ui", "bootstrap"]
omit = ["*/tests/*", "*/__main__.py", "*/_legacy-single-user/*"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "def __repr__",
]
show_missing = true
precision = 1

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
markers = [
    "requires_pandoc: skip if pandoc binary not available",
    "requires_tesseract: skip if tesseract binary not available",
    "requires_reportlab: skip if reportlab package not installed",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
