[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "custodia-cli"
version = "0.1.0"
description = "Custodia CLI — ingestion e build vault Obsidian per consulenti."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Custodia Team" }]
license = { text = "Proprietary" }
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pyyaml>=6",
    "anthropic>=0.40",
    "jsonschema>=4",
    "google-api-python-client>=2.100",
    "google-auth>=2.20",
    "google-auth-oauthlib>=1.0",
    "pypdf>=4.0",
    "python-docx>=1.0",
    "openpyxl>=3.1",
    "defusedxml>=0.7",
    "msal>=1.28",
    "requests>=2.31",
    "html2text>=2024.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-mock>=3.12",
]

[project.scripts]
custodia = "custodia_cli.main:app"

[tool.setuptools.packages.find]
include = ["custodia_cli*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"custodia_cli.state" = ["schema.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "stress: stress test su corpus sintetico ~5000 file (lenti, ~30-60s). Skippa con -m 'not stress'.",
]
