[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "custodia-web"
version = "0.1.0"
description = "Custodia Web — GUI Streamlit single-user del CLI Custodia."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Custodia Team" }]
license = { text = "Proprietary" }
dependencies = [
    "streamlit>=1.40",
    "custodia-cli",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
custodia-web = "custodia_web.cli:main"

[tool.setuptools.packages.find]
include = ["custodia_web*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
